k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: expezplit-prod
  labels:
    app.kubernetes.io/part-of: expezplit
